--- a/introduction.html
+++ b/introduction.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="styles/default.css">
 	<title>
-	Sydney M. Moncur Web215-N801 Introduction 
+	Sydney M. Moncur web215 Introduction 
 	</title>
 
 </head>
