--- a/introductionform.html
+++ b/introductionform.html
@@ -12,9 +12,11 @@
 
 <main>
        
-    <figure style="text-align: center;">
-        <img src = "images/intro.png" alt = "Me"  height = "370" width = "327" />   
-	   <figcaption>In the South End area</figcaption>
+   <h2>Introduction Form</h2>
+       <h4 id="greeting">Welcome to Syd's Shoe Styles !</h4>
+  <figure style="text-align: center;">
+        <img src = "images/intro.png" alt = "Me"  height = "370" width = "327" />
+        
   </figure>
 
 	
