--- a/introductionform.html
+++ b/introductionform.html
@@ -87,7 +87,7 @@
     <textarea id="also_share" rows="10" cols="40" required>During my free time I really enjoy cooking along with baking.</textarea> 
     
     <br>
-    <input type="button" id="submit" onclick="return formData()" value="Submit"/>
+    <input type="button" id="submit" onclick="return introData()" value="Submit"/>
 	  
     </form>
 </div> 
