--- a/brand.html
+++ b/brand.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>  
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Sydney M. Moncur - web215 - Brand Guide </title>
+    <title>Sydney's Pen Guide - WEB215 - Brand Guide </title>
     <link rel = "stylesheet" type = "text/css" href = "styles/default.css" />  
 
 </head>
