--- a/brand.html
+++ b/brand.html
@@ -4,6 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Sydney's Pen Guide - WEB215 - Brand Guide </title>
     <link rel = "stylesheet" type = "text/css" href = "styles/default.css" />  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
 
 </head>
 <body>
