--- a/contract.html
+++ b/contract.html
@@ -6,6 +6,9 @@
 	<title>
 	Sydney M. Moncur web215-N801 COURSE CONTRACT 
 	</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
 
 </head>
 
