--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <title>
 Sydney M. Moncur web215-N801 TOC
 </title>
-	
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">	
 	
 <body>
 
