--- a/introduction.html
+++ b/introduction.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="styles/default.css">
 	<title>
-	Sydney M. Moncur web215 Introduction 
+	Sydne's Pen Guide WEB215 Introduction 
 	</title>
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
 </head>
 	
 <body>
