--- a/introduction_form.html
+++ b/introduction_form.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>  
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Sydney Moncur - WEB215 - Introduction Form </title>
+    <title>Sydney's Pen Guide - WEB215 - Introduction Form </title>
     <link rel = "stylesheet" type = "text/css" href = "styles/default.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
     <script src ="scripts/form.js"></script>
 
 </head>
