--- a/introduction.html
+++ b/introduction.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="styles/default.css">
 	<title>
-	Sydne's Pen Guide WEB215 Introduction 
+	Sydney's Pen Guide WEB215 Introduction 
 	</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
