--- a/introduction_form.html
+++ b/introduction_form.html
@@ -17,7 +17,7 @@
     <h2>Introduction Form</h2>
     <h4 id="greeting">Welcome to Sydney's Pen Guide !</h4>   
     <figure style="text-align: center;">
-        <img src = "images/intro.png" alt = "Me"  height = "370" width = "327" />   
+        <img src = "images/intro.png" alt = "Me" />   
 	   <figcaption>In the South End area</figcaption>
   </figure>
 
