--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="styles/default.css">
 <title>
-Sydney M. Moncur web215-N801 TOC
+Sydney M. Moncur WEB215 Sydney's Pen Guide TOC 
 </title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
