--- a/introduction_form.html
+++ b/introduction_form.html
@@ -82,9 +82,9 @@
     <br> 
 	<label for="like" id= "like">Did you like this form?</label>
     <br>
-	<input type="checkbox" id="yes" name="like" value="Yes, I do " checked>
+	<input type="checkbox" id="yes" name="like" value="Yes" checked>
 	<label for="yes">Yes</label><br>
-	<input type="checkbox" id="no" name="like" value="No, I do not.">
+	<input type="checkbox" id="no" name="like" value=" No">
 	<label for="no">No</label>
 
     <br>
