--- a/introduction_form.html
+++ b/introduction_form.html
@@ -82,10 +82,10 @@
     <br> 
 	<label for="like" id= "like">Did you like this form?</label>
     <br>
-	<input type="checkbox" id="yes" name="like" value="Yes" checked>
-	<label for="yes">Yes</label><br>
-	<input type="checkbox" id="no" name="like" value=" No">
-	<label for="no">No</label>
+	<input type="checkbox" id="liked" name="like" value="I liked this form!" checked>
+	<label for="liked">liked</label><br>
+	<input type="checkbox" id="not" name="like" value=" I did not like this form!">
+	<label for="no">not</label>
 
     <br>
     <br>
