--- a/introduction_form.html
+++ b/introduction_form.html
@@ -80,12 +80,12 @@
 	<label for="gel">Gel</label><br>
 
     <br> 
-	<label for="like" id= "like">Did you like this form?</label>
+	<label for="like" id= "like"> Paper Preferences</label>
     <br>
-	<input type="checkbox" id="liked" name="like" value="I liked this form!" checked>
-	<label for="liked">liked</label><br>
-	<input type="checkbox" id="not" name="like" value=" I did not like this form!">
-	<label for="no">not</label>
+	<input type="checkbox" id="lined" name="like" value="lined" checked>
+	<label for="lined">Lined Paper</label><br>
+	<input type="checkbox" id="copy" name="like" value="copy">
+	<label for="copy">Copy Paper</label>
 
     <br>
     <br>
