--- a/introduction_form.html
+++ b/introduction_form.html
@@ -80,11 +80,11 @@
 	<label for="gel">Gel</label><br>
 
     <br> 
-	<label for="like" id= "like"> Paper Preferences</label>
+	<label for="like" id= "like"> Paper Preferences: </label>
     <br>
-	<input type="checkbox" id="lined" name="like" value="lined" checked>
+	<input type="checkbox" id="lined" name="like" value="Lined Paper" checked>
 	<label for="lined">Lined Paper</label><br>
-	<input type="checkbox" id="copy" name="like" value="copy">
+	<input type="checkbox" id="copy" name="like" value=" Copy Paper">
 	<label for="copy">Copy Paper</label>
 
     <br>
